# nlp-4-soc

./: .env.example  .gitattributes  .gitignore  .gitmodules  LICENSE  README.md  add_stats_g_eval.ipynb  check_outputs_json.py  fact_check_pipeline.py  fact_check_pipeline_openai.py  plot_results.ipynb  prepare_datasets.ipynb  pyproject.toml  ragas_eval.py  sample.json  sample_complex.json  test_claims.jsonl  trim_result_samples.ipynb
archive/: sample.json
archive/examples/: e2.txt  e4.txt
archive/hover/: download_data.sh
climate_fever/: test-00000-of-00001.parquet
converted_outputs/gpt4o_cot/: politi_hop_gpt4o_cot.json
examples/: e1.txt  e3.txt  e4.txt
examples_no_cot/: e2_no_cot.txt  e4_no_cot.txt
experiments/: ares.py  ares_experiment.py  entailnment_evaluation.ipynb  geval_evaluation.ipynb  human_in_the_loop_evaluation.ipynb  ragas_evaluation.ipynb  ragas_evaluation.py
experiments/merged_outputs/: all_stats.csv
inference/: fact_check_pipeline.py  note.txt
inference_outputs/: sample_converted_outputs_format.json
misc_notebooks/: add_stats_g_eval.ipynb  calculate_avg_score_ragas.ipynb  combine _stats_files.ipynb  final_analysis.ipynb  geval_fix_ids.ipynb  merge_results.ipynb  trim_result_samples.ipynb
outputs/: mistral.json
prepared_datasets/: climate_fever_with_evidence_details.json  climate_fever_with_evidence_details_labels.json  covid_fact.json  hover_dev_full_docs.json  politihop_combined_and_grouped.json  politihop_combined_and_grouped_ruling.json
unified_datasets/: covid_fact_hover.json  politihop_combined_and_grouped_ruling_hover.json
(+202 files in other folders)
