[project]
name = "nlp-4-soc"
version = "0.1.0"
description = "NLP for Society (NLP4Soc) Project. DSAIT4100, TU Delft, 2025."
readme = "README.md"
authors = [
    {name = "Samuel Goldie"},
    {name = "Jorden van Schijndel"},
    {name = "Franciszek Latała"},
    {name = "Razo van Berkel"},
    {name = "Deniz Çetin"}
]
maintainers = []
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "langchain-ollama>=0.3.3",
    "matplotlib>=3.10.3",
    "nltk>=3.9.1",
    "numpy>=2.3.0",
    "openai>=1.84.0",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "ragas>=0.2.15",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "torch>=2.7.1",
    "transformers>=4.52.4",
]
